Fixed bug where links don't show in user message. Added Dark Mode to Puppeteer to fix user colors.

--- a/src/components/css/ChatMessage.css
+++ b/src/components/css/ChatMessage.css
@@ -73,3 +73,7 @@
   background-color: rgba(115, 66, 124, 0.3); /* Equivalent to hover:bg-gray-500/30 */
 
 }
+
+.message-link {
+  color: rgb(193, 126, 255);
+}
